Comment out deploy release_command
Comment out the deploy section in fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -8,8 +8,8 @@ primary_region = 'sjc'
 
 [build]
 
-[deploy]
-  release_command = "npx prisma db push"
+# [deploy]
+#   release_command = "npx prisma db push"
 
 [http_service]
   internal_port = 8080
